--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -125,7 +125,7 @@
             <div class="row text-justify">
                 <div class="col-md-12">
                     <p class="large text-muted">
-                        Time series data are ubiquitous. In domains as diverse as finance, retail, entertainment, transportation and health care, we observe a fundamental shift away from parsimonious, infrequent measurement to nearly continuous monitoring and recording. Rapid
+                        Time series data are ubiquitous. In domains as diverse as finance, retail, entertainment, transportation and health care, we observe a fundamental shift away from parsimonious, infrequent measurement to nearly continuous monitoring and recording. Recent
                         advances in diverse sensing technologies, ranging from remote sensors to wearables and social sensing, are generating a rapid growth in the size and complexity of time series archives. Thus, although time series analysis has been
                         studied extensively, its importance only continues to grow. What is more, modern time series data pose significant challenges to existing techniques (e.g., irregular sampling in hospital records and spatiotemporal structure in
                         climate data). Finally, time series mining research is challenging and rewarding because it bridges a variety of disciplines and demands interdisciplinary solutions. Now is the time to discuss the next generation of temporal mining
@@ -139,7 +139,7 @@
                         </li>
                         <li>Time series with special structure: spatiotemporal (e.g., traffic speeds at different locations), relational (e.g., patients with similar diseases), hierarchical, etc.
                         </li>
-                        <li>Time series with sparse or irregular sampling, non-random missing values, and special types of measurement noise or bias.
+                        <li>Time series with sparse or irregular sampling, missing values at and not at random, and special types of measurement noise or bias.
                         </li>
                         <li>Time series that are multivariate, high-dimensional, heterogeneous, etc., or that possess other atypical properties.
                         </li>
@@ -178,8 +178,8 @@
             <div class="row text-justify">
                 <div class="col-md-12">
                     <p class="large text-muted">
-                        Submissions should follow the <a href="https://www.kdd.org/kdd2021/Calls/view/kdd-2021-call-for-research-papers">SIGKDD
-                    formatting requirements</a> and will be evaluated using the <a href="https://www.kdd.org/kdd2021/Calls/view/kdd-2021-call-for-research-papers">SIGKDD
+                        Submissions should follow the <a href="https://kdd.org/kdd2021/calls/view/call-for-research-track-papers">SIGKDD
+                    formatting requirements</a> (unless otherwise stated) and will be evaluated using the <a href="https://kdd.org/kdd2021/calls/view/call-for-research-track-papers">SIGKDD
                     Research Track evaluation criteria</a>. Preference will be given to papers that are reproducible, and authors are encouraged to share their data and code publicly whenever possible. Submissions are strongly recommended to be <b>no more than 4 pages</b>,
                         excluding references or supplementary materials (all in a single pdf). The appropriateness of using additional pages over the recommended length will be judged by reviewers. All submissions must be in pdf format using the workshop
                         template (<a href="template/sample-latex.zip" target="_blank">latex</a>,
@@ -198,8 +198,8 @@
                     </p>
 
                     <p class="large text-muted">
-                        The review process is single-round and double-blind (submission files have to be anonymized). Concurrent submissions to other journals and conferences are acceptable. Accepted papers will be presented as posters during the workshop and list on the website.
-                        Besides, a small number of accepted papers will be selected to be presented as contributed talks.
+                        The review process is single-round and double-blind (submission files have to be anonymized). Concurrent submissions to other journals and conferences are acceptable. Accepted papers will be presented as posters during the workshop and list on the website
+                        (non-archival/without proceedings). Besides, a small number of accepted papers will be selected to be presented as contributed talks.
                     </p>
 
                     <p class="large text-muted">
@@ -343,7 +343,7 @@
     </section>
 
 
-    <section id="program_committee">
+    <!-- <section id="program_committee">
 
         <div class="container">
             <div class="row">
@@ -374,7 +374,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
 
 
     <!-- jQuery -->
