--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -183,7 +183,7 @@
                     Research Track evaluation criteria</a>. Preference will be given to papers that are reproducible, and authors are encouraged to share their data and code publicly whenever possible. Submissions are strongly recommended to be <b>no more than 4 pages</b>,
                         excluding references or supplementary materials (all in a single pdf). The appropriateness of using additional pages over the recommended length will be judged by reviewers. All submissions must be in pdf format using the workshop
                         template (<a href="template/sample-latex.zip" target="_blank">latex</a>,
-                        <a href="template/word-template-anonymous.docx" target="_blank">word</a>). Submissions will be managed via the MiLeTs 2021 EasyChair website: <a href="https://easychair.org/conferences/?conf=milets2021" target="_blank">https://easychair.org/conferences/?conf=milets2021</a>.
+                        <a href="template/word-template-anonymous.docx" target="_blank">word</a>). Submissions will be managed via the MiLeTS 2021 EasyChair website: <a href="https://easychair.org/conferences/?conf=milets2021" target="_blank">https://easychair.org/conferences/?conf=milets2021</a>.
                     </p>
 
                     <p class="large text-muted">
