--- a/milets2018/index.html
+++ b/milets2018/index.html
@@ -86,7 +86,7 @@
                         <a class="page-scroll" href="#organization">Organizers</a>
                     </li>
                     <li>
-                        <a href="http://www-bcf.usc.edu/~liu32/milets17/" target="_blank">MiLeTS '17</a>
+                        <a href="http://kdd-milets.github.io/milets2017" target="_blank">MiLeTS '17</a>
                     </li>
                 </ul>
             </div>
