--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -93,7 +93,7 @@
                         <a class="page-scroll" href="#program_committee">PC</a>
                     </li>
                     <li>
-                        <a href="https://milets19.github.io" target="_blank">MiLeTS '19</a>
+                        <a href="http://kdd-milets.github.io/milets2019/" target="_blank">MiLeTS '19</a>
                     </li>
                 </ul>
             </div>
