Updates key dates.

--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -229,13 +229,14 @@
                         <!--<b>Paper Submission Deadline:</b> <strike class="text-muted">TBD</strike>-->
                         <!--</p>-->
                         <p class="large text-muted">
-                            <b>Paper Submission Deadline:</b> May 20th, 2021, 11:59PM Alofi Time
+                            <b>Paper Submission Deadline:</b>
+                            <span style="text-decoration: line-through;" class="text-muted">May 20th</span> June 1st, 2021, 11:59PM Alofi Time
                         </p>
                         <p class="large text-muted">
-                            <b>Author Notification:</b> <span>June 10th, 2021</span>
+                            <b>Author Notification:</b> <span>June 28th, 2021</span>
                         </p>
                         <p class="large text-muted">
-                            <b>Camera Ready Version:</b> June 24th, 2021
+                            <b>Camera Ready Version:</b> July 5th, 2021
                         </p>
                         <p class="large text-muted">
                             <b>Workshop:</b> August 14th, 2021
