--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -344,7 +344,7 @@
     </section>
 
 
-    <!-- <section id="program_committee">
+    <section id="program_committee">
 
         <div class="container">
             <div class="row">
@@ -356,18 +356,20 @@
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
                     <ul class="large">
-                        <li>Zhengping Che, Didi Chuxing</li>
-                        <li>Dehua Cheng, Facebook AI </li>
-                        <li>Jing Dai, Google</li>
-                        <li>Abhishek Mukherji, Cisco Systems</li>
-                        <li>Sungyong Seo, University of Southern California </li>
-                        <li>Xingjian Shi, Amazon Web Sevices</li>
-                        <li>Michael Tsang, University of Southern California</li>
-                        <li>Zheng Wang, Didi Chuxing</li>
+                        <li>Souhaib Ben Taieb, University of Mons</li>
+                        <li>Wei Cao, Microsoft Research</li>
+                        <li>Yuzhou Chen, Southern Methodist University</li>
+                        <li>Runpeng Cui, Tsinghua University</li>
+                        <li>Jilin Hu, Aalborg University</li>
+                        <li>Bo Jiang, Didi Chuxing</li>
+                        <li>Xiang Li, Massachusetts General Hospital</li>
+                        <li>Abhishek Mukherji, Accenture Inc.</li>
+                        <li>Minh Nguyen, University of Southern California</li>
+                        <li>Sungyong Seo, University of Southern California</li>
+                        <li>Xingjian Shi, The Hong Kong University of Science and Technology</li>
                         <li>Qingsong Wen, Alibaba DAMO Academy</li>
-                        <li>Bin Yang, Aalborg University</li>
-                        <li>Scott Yang, New York University</li>
-                        <li>Michael Yeh, Visa Research</li>
+                        <li>Chin-Chia Michael Yeh, Visa Research</li>
+                        <li>Dalin Zhang, Aalborg University</li>
                         <li>Jiayu Zhou, Michigan State University</li>
                     </ul>
                 </div>
@@ -375,7 +377,7 @@
             </div>
 
         </div>
-    </section> -->
+    </section>
 
 
     <!-- jQuery -->
