--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -365,9 +365,10 @@
                         <li>Xiang Li, Massachusetts General Hospital</li>
                         <li>Abhishek Mukherji, Accenture Inc.</li>
                         <li>Minh Nguyen, University of Southern California</li>
-                        <li>Sungyong Seo, University of Southern California</li>
+                        <li>Rajat Sen, Google Inc.</li>
+                        <li>Sungyong Seo, Google Inc.</li>
                         <li>Xingjian Shi, The Hong Kong University of Science and Technology</li>
-                        <li>Qingsong Wen, Alibaba DAMO Academy</li>
+                        <li>Qingsong Wen, Amazon Web Services</li>
                         <li>Chin-Chia Michael Yeh, Visa Research</li>
                         <li>Dalin Zhang, Aalborg University</li>
                         <li>Jiayu Zhou, Michigan State University</li>
