--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -368,7 +368,7 @@
                         <li>Rajat Sen, Google Inc.</li>
                         <li>Sungyong Seo, Google Inc.</li>
                         <li>Xingjian Shi, The Hong Kong University of Science and Technology</li>
-                        <li>Qingsong Wen, Amazon Web Services</li>
+                        <li>Qingsong Wen, Alibaba DAMO Academy</li>
                         <li>Chin-Chia Michael Yeh, Visa Research</li>
                         <li>Dalin Zhang, Aalborg University</li>
                         <li>Jiayu Zhou, Michigan State University</li>
