--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -278,7 +278,7 @@
                     <div class="team-member">
                         <img src="img/yaguangli.jpg" class="img-responsive img-circle" alt="">
                         <h4><a href="https://liyaguang.github.io/">YaGuang Li</a></h4>
-                        <p class="text-muted">Google</p>
+                        <p class="text-muted">Google Brain</p>
                     </div>
                 </div>
 
