Updates invited speaker.

--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -162,6 +162,138 @@
 
     <!-- Keynote Section -->
 
+    <section id="keynote">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Speakers</h2>
+                </div>
+
+            </div>
+
+            <!-- Aditya Prakash -->
+            <div class="row speakers">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <a href="https://www.cc.gatech.edu/~badityap/" target="_blank">
+                            <img src="img/aditya_prakash.jpg" style="height: 240px; width:240px;" class="img-responsive img-circle" alt="B. Aditya Prakash">
+                        </a>
+                        <h4><a href="https://www.cc.gatech.edu/~badityap/" target="_blank">B. Aditya Prakash</a></h4>
+                        <p class="text-muted">Associate Professor<br/>Georgia Institute of Technology</p>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-8 text-justify">
+                    <!-- <h3> Talk title </h3>
+                    <p>
+                    </p> -->
+                    <b>Bio</b><br> B. Aditya Prakash is an Associate Professor in the College of Computing at the Georgia Institute of Technology (“Georgia Tech”). He received a Ph.D. from the Computer Science Department at Carnegie Mellon University
+                    in 2012, and a B.Tech (in CS) from the Indian Institute of Technology (IIT) -- Bombay in 2007. He has published one book, more than 80 papers in major venues, holds two U.S. patents and has given several tutorials at leading conferences.
+                    His work has also received multiple best-of-conference, best paper and travel awards. His research interests include Data Science, Machine Learning and AI, with emphasis on big-data problems in large real-world networks and time-series,
+                    with applications to computational epidemiology/public health, urban computing, security and the Web. Tools developed by his group have been in use in many places including ORNL, Walmart and Facebook. He has received several awards
+                    such as a Facebook Faculty Award, the NSF CAREER award and was named as one of ‘AI Ten to Watch’ by IEEE. His work has also won awards in multiple data science challenges (e.g the Facebook COVID19 Symptom Challenge) and been highlighted
+                    by several media outlets/popular press like FiveThirtyEight.com. He is also a member of the infectious diseases modeling MIDAS network and core-faculty at the Center for Machine Learning (ML@GT) and the Institute for Data Engineering
+                    and Science (IDEaS) at Georgia Tech. Aditya’s Twitter handle is @badityap.
+                </div>
+            </div>
+
+            <!-- David Duvenaud -->
+            <div class="row speakers">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <a href="http://www.cs.toronto.edu/~duvenaud/" target="_blank">
+                            <img src="img/david_duvenaud.jpg" style="height: 240px; width:240px;" class="img-responsive img-circle" alt="David Duvenaud">
+                        </a>
+                        <h4><a href="http://www.cs.toronto.edu/~duvenaud/" target="_blank">David Duvenaud</a></h4>
+                        <p class="text-muted"> Assistant Professor<br/>University of Toronto</p>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-8 text-justify">
+                    <!-- <h3>Talk title</h3>
+                    <p>
+                    </p> -->
+
+                    <br>
+                    <b>Bio</b><br>David Duvenaud is an assistant professor at the University of Toronto. His research focuses on constructing deep probabilistic models to help predict, explain and design things. For example: Neural ODEs, a kind of continuous-depth
+                    neural network, Automatic chemical design using generative models, Gradient-based hyperparameter tuning, Structured latent-variable models for modeling video, and Convolutional networks on graphs. Previously, He was a postdoc in the
+                    Harvard Intelligent Probabilistic Systems group with Ryan Adams. He did my Ph.D. at the University of Cambridge, where his advisors were Carl Rasmussen and Zoubin Ghahramani. His M.Sc. advisor was Kevin Murphy at the University of
+                    British Columbia. He spent a summer working on probabilistic numerics at the Max Planck Institute for Intelligent Systems, and the two summers before that at Google Research, doing machine vision. He co-founded Invenia, an energy forecasting
+                    and trading firm where he still consult. He is also a founding member of the Vector Institute.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Eamonn Keogh -->
+            <div class="row speakers">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <a href="https://www.cs.ucr.edu/~eamonn/" target="_blank">
+                            <img src="img/eamonn.jpg" style="height: 240px; width:240px;" class="img-responsive img-circle" alt="Eamonn Keogh">
+                        </a>
+                        <h4><a href="https://www.cs.ucr.edu/~eamonn/" target="_blank">Eamonn Keogh</a></h4>
+                        <p class="text-muted"> Distinguished Professor <br/>University of California - Riverside</p>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-8 text-justify">
+                    <h3>Irrational Exuberance: Why we should not believe 99% of papers on Time Series Anomaly Detection
+                    </h3>
+
+                    <br>
+                    <b>Bio</b><br>Eamonn Keogh is a Distinguished Professor of Computer Science at the University of California Riverside. With his students, he invented many of the most commonly used time series primitives, including Shapelets, Discords,
+                    Motifs, SAX, PAA, and the Matrix Profile. He has won at least one best paper award in the major data mining conferences (SIGMOD, SIGKDD, IEEE, SDM) and his h-index of 100 reflects the significant amount of citations his work has attracted.
+
+                    </p>
+                </div>
+            </div>
+
+            <!-- Marco Cuturi -->
+            <div class="row speakers">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <a href="https://marcocuturi.net/" target="_blank">
+                            <img src="img/marco_cuturi.jpg" style="height: 240px; width:240px;" class="img-responsive img-circle" alt="Marco Cuturi">
+                        </a>
+                        <h4><a href="https://marcocuturi.net/" target="_blank">Marco Cuturi</a></h4>
+                        <p class="text-muted">Professor <br/>CREST - ENSAE, Institut Polytechnique de Paris, Google Brain</p>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-8 text-justify">
+                    <!-- <h3>Title </h3>
+                    <p>
+
+                    </p> -->
+                    <br>
+                    <b>Bio</b><br> Marco Cuturi joined Google Brain, in Paris, in October 2018. He graduated from ENSAE (2001), ENS Cachan (Master MVA, 2002) and holds a PhD in applied maths obtained in 2005 at Ecole des Mines de Paris. He worked as a
+                    post-doctoral researcher at the Institute of Statistical Mathematics, Tokyo, between 11/2005 and 03/2007. He worked in the financial industry between 04/2007 and 09/2008. After working at the ORFE department of Princeton University
+                    between 02/2009 and 08/2010 as a lecturer, he was at the Graduate School of Informatics of Kyoto University between 09/2010 and 09/2016 as a tenured associate professor. He then joined ENSAE, the french national school for statistics
+                    and economics, in 9/2016, where he still teaches. His recent proposal to solve optimal transport using an entropic regularization has re-ignited interest in optimal transport and Wasserstein distances in the machine learning community.
+                    His work has recently focused on applying that loss function to problems involving probability distributions, e.g. topic models / dictionary learning for text and images, parametric inference for generative models, regression with
+                    a Wasserstein loss and probabilistic embeddings for words.
+                    </p>
+                </div>
+            </div>
+
+
+
+
+            <!-- <div class="row">
+            <div class="col-lg-12 text-center">
+                <h3 class="section-subheading text-muted">More keynote speakers will be announced ...</h3>
+            </div>
+        </div> -->
+
+
+        </div>
+
+    </section>
+
 
     <!-- Accepted Papers Section -->
 
