Updates workshop time.

--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -371,7 +371,7 @@
                             <b>Camera Ready Version:</b> July 16th, 2021
                         </p>
                         <p class="large text-muted">
-                            <b>Workshop:</b> August 14th, 2021
+                            <b>Workshop:</b> August 15th, 2021 8:00 AM - 5:00PM PST.
                         </p>
                     </div>
                 </div>
