--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -71,12 +71,12 @@
                     <li>
                         <a class="page-scroll" href="#introduction">Intro</a>
                     </li>
-                    <!-- <li>
+                    <li>
                         <a class="page-scroll" href="#program">Program</a>
-                    </li> -->
-                    <!-- <li>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#keynote">Keynotes</a>
-                    </li> -->
+                    </li>
                     <!-- <li>
                         <a class="page-scroll" href="#papers">Accepted Paper & Posters</a>
                     </li> -->
@@ -158,6 +158,74 @@
     </section>
 
     <!-- Program Section -->
+    <section id="program" class="bg-mid-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Schedule</h2>
+                    <h3 class="section-subheading text-muted">
+                        8:00 AM - 5:00 PM, August 15th, 2020, PST<br>
+                    </h3>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-lg-1 text-left">
+                    &nbsp;
+                </div>
+                <div class="col-lg-10 text-left ">
+                    <h3>MORNING SESSION (PST)</h3>
+                    <p>08:00-08:10 Opening remarks</p>
+                    <p>08:10-09:10 Keynote Talk, Aditya Prakash</p>
+                    <!-- <ul>
+                        <li><strong></strong>, <em>Aditya Prakash</em></li>
+                    </ul> -->
+                    <p>9:10-9:50 Contributed Talks</p>
+                    <p>9:50-10:20 Coffee Break</p>
+                    <p>10:20-11:00 Contributed Talks</p>
+                    <p>11:00-12:00 Keynote Talk, David Duvenaud</p>
+                    <!-- <ul>
+                        <li><strong>Think Globally, Act Locally: A Deep Neural Network Approach to High-Dimensional Time Series Forecasting</strong>, <em>Inderjit S. Dhillon</em></li>
+                    </ul> -->
+
+
+                    <!-- <ul>
+                        <li>
+                            <strong>The Effectiveness of Discretization in Forecasting: An Empirical Study on Neural Time Series Models</strong>. Stephan Rabanser, Tim Januschowski, Valentin Flunkert, David Salinas and Jan Gasthaus</li>
+                        <li>
+                            <strong>Driver2vec: Driver Identification from Automotive Data</strong>. Jingbo Yang, Ruge Zhao, Meixian Zhu, Jaka Sodnik, David Hallac and Jure Leskovec</li>
+                        <li>
+                            <strong>Improving Robustness on Seasonality-Heavy Multivariate Time Series Anomaly Detection</strong>. Farzaneh Khoshnevisan, Zhewen Fan and Vitor Carvalho</li>
+                        <li>
+                            <strong>Detection of Environment Transitions in Time Series Data for Responsive Science</strong>. Ameya Daigavane, Kiri Wagstaff, Gary Doran, Corey Cochrane, Caitriona Jackman and Abigail Rymer</li>
+                        <li>
+                            <strong>Instance Explainable Temporal Network For Multivariate Timeseries</strong>. Naveen Madiraju and Homa Karimabadi</li>
+                    </ul> -->
+                    <p>12:00-13:00 Lunch Break</p>
+
+                    <h3>AFTERNOON SESSION (PST)</h3>
+                    <p>13:00-14:00 Keynote Talk, Eamonn Keogh</p>
+                    <!-- <ul>
+                        <li><strong>The Efficient Transformer </strong>, <em>Łukasz Kaiser</em></li>
+                    </ul> -->
+                    <p>14:00-14:35 Poster Spotlights</p>
+                    <p>14:35-15:00 Coffee Break</p>
+                    <p>15:00-15:50 Poster Session</p>
+                    <p>15:50-16:50 Keynote Talk, Marco Cuturi</p>
+                    <!-- <ul>
+                        <li><strong>Machine Learning for Aviation Safety</strong>, <em>Nikunj Oza</em></li>
+                    </ul>
+                     -->
+                    <p>16:50-17:00 Concluding Remarks</p>
+                </div>
+
+                <div class="col-lg-1 text-left">
+                    &nbsp;
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Keynote Section -->
