--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -177,17 +177,17 @@
                 <div class="col-lg-10 text-left ">
                     <h3>MORNING SESSION (PST)</h3>
                     <p>08:00-08:10 Opening remarks</p>
-                    <p>08:10-09:10 Keynote Talk, Aditya Prakash</p>
-                    <!-- <ul>
-                        <li><strong></strong>, <em>Aditya Prakash</em></li>
-                    </ul> -->
+                    <p>08:10-09:10 Keynote Talk</p>
+                    <ul>
+                        <li><strong>Deep Learning Data-driven approaches for Epidemic Forecasting</strong>, <em>Aditya Prakash</em></li>
+                    </ul>
                     <p>9:10-9:50 Contributed Talks</p>
                     <p>9:50-10:20 Coffee Break</p>
                     <p>10:20-11:00 Contributed Talks</p>
-                    <p>11:00-12:00 Keynote Talk, David Duvenaud</p>
-                    <!-- <ul>
-                        <li><strong>Think Globally, Act Locally: A Deep Neural Network Approach to High-Dimensional Time Series Forecasting</strong>, <em>Inderjit S. Dhillon</em></li>
-                    </ul> -->
+                    <p>11:00-12:00 Keynote Talk</p>
+                    <ul>
+                        <li><strong>Modeling raw, messy time series data with latent stochastic differential equations</strong>, <em>David Duvenaud</em></li>
+                    </ul>
 
 
                     <!-- <ul>
@@ -205,18 +205,18 @@
                     <p>12:00-13:00 Lunch Break</p>
 
                     <h3>AFTERNOON SESSION (PST)</h3>
-                    <p>13:00-14:00 Keynote Talk, Eamonn Keogh</p>
-                    <!-- <ul>
-                        <li><strong>The Efficient Transformer </strong>, <em>Łukasz Kaiser</em></li>
-                    </ul> -->
+                    <p>13:00-14:00 Keynote Talk</p>
+                    <ul>
+                        <li><strong>Irrational Exuberance: Why we should not believe 99% of papers on Time Series Anomaly Detection</strong>, <em>Eamonn Keogh</em></li>
+                    </ul>
                     <p>14:00-14:35 Poster Spotlights</p>
                     <p>14:35-15:00 Coffee Break</p>
                     <p>15:00-15:50 Poster Session</p>
-                    <p>15:50-16:50 Keynote Talk, Marco Cuturi</p>
-                    <!-- <ul>
-                        <li><strong>Machine Learning for Aviation Safety</strong>, <em>Nikunj Oza</em></li>
+                    <p>15:50-16:50 Keynote Talk</p>
+                    <ul>
+                        <li><strong>On the Interface between Optimal Transport and Time Series</strong>, <em>Marco Cuturi</em></li>
                     </ul>
-                     -->
+
                     <p>16:50-17:00 Concluding Remarks</p>
                 </div>
 
