--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -164,7 +164,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Schedule</h2>
                     <h3 class="section-subheading text-muted">
-                        8:00 AM - 5:00 PM, August 15th, 2020, PST<br>
+                        8:00 AM - 5:00 PM, August 15th, 2020, Pacific Time<br>
                     </h3>
                 </div>
             </div>
@@ -175,36 +175,46 @@
                     &nbsp;
                 </div>
                 <div class="col-lg-10 text-left ">
-                    <h3>MORNING SESSION (PST)</h3>
+                    <h3>MORNING SESSION (Pacific Time)</h3>
                     <p>08:00-08:10 Opening remarks</p>
                     <p>08:10-09:10 Keynote Talk</p>
                     <ul>
                         <li><strong>Deep Learning Data-driven approaches for Epidemic Forecasting</strong>, <em>Aditya Prakash</em></li>
                     </ul>
                     <p>9:10-9:50 Contributed Talks</p>
+                    <ul>
+                        <li>
+                            <strong>RLAD: Time Series Anomaly Detection through ReinforcementLearning and Active Learning</strong>. Tong Wu and Jorge Ortiz</li>
+                        <li>
+                            <strong>Personalized and Environment-Aware Battery Prediction for Electric Vehicles</strong>. Jingbo Yang, Ruge Zhao, Meixian Zhu, Jaka Sodnik, David Hallac and Jure Leskovec</li>
+                        <li>
+                            <strong>Exploring Generative Data Augmentation in Multivariate Time Series Forecasting : Opportunities and Challenges</strong>. Ankur Debnath, Govind Waghmare, Hardik Wadhwa, Siddhartha Asthana and Ankur Arora</li>
+                        <li>
+                            <strong>Short Text Clustering in Continuous Time Using Stacked Dirichlet-Hawkes Process with Inverse Cluster Frequency Prior</strong>. Avirup Saha and Balaji Ganesan
+                        </li>
+                    </ul>
                     <p>9:50-10:20 Coffee Break</p>
                     <p>10:20-11:00 Contributed Talks</p>
+                    <ul>
+                        <li>
+                            <strong>TE-ESN: Time Encoding Echo State Network for Prediction Based on Irregularly Sampled Time Series Data</strong>. Chenxi Sun, Shenda Hong, Moxian Song and Hongyan Li</li>
+                        <li>
+                            <strong>Learning Robust Representations using a Change Point Framework</strong>. Ame Osotsi and Qunhua Li</li>
+                        <li>
+                            <strong>Low-Rank Autoregressive Tensor Completion for Spatiotemporal Traffic Data Imputation</strong>. Xinyu Chen, Mengying Lei, Nicolas Saunier and Lijun Sun</li>
+                        <li>
+                            <strong>Improving COVID-19 Forecasting using eXogenous Variables</strong>. Mohammadhossein Toutiaee, Xiaochuan Li, Yogesh Chaudhari, Shophine Sivaraja, Aishwarya Venkataraj, Indrajeet Javeri, Yuan Ke, Ismailcem Arpinar, Nicole
+                            Lazar and John Miller
+                        </li>
+                    </ul>
                     <p>11:00-12:00 Keynote Talk</p>
                     <ul>
                         <li><strong>Modeling raw, messy time series data with latent stochastic differential equations</strong>, <em>David Duvenaud</em></li>
                     </ul>
 
-
-                    <!-- <ul>
-                        <li>
-                            <strong>The Effectiveness of Discretization in Forecasting: An Empirical Study on Neural Time Series Models</strong>. Stephan Rabanser, Tim Januschowski, Valentin Flunkert, David Salinas and Jan Gasthaus</li>
-                        <li>
-                            <strong>Driver2vec: Driver Identification from Automotive Data</strong>. Jingbo Yang, Ruge Zhao, Meixian Zhu, Jaka Sodnik, David Hallac and Jure Leskovec</li>
-                        <li>
-                            <strong>Improving Robustness on Seasonality-Heavy Multivariate Time Series Anomaly Detection</strong>. Farzaneh Khoshnevisan, Zhewen Fan and Vitor Carvalho</li>
-                        <li>
-                            <strong>Detection of Environment Transitions in Time Series Data for Responsive Science</strong>. Ameya Daigavane, Kiri Wagstaff, Gary Doran, Corey Cochrane, Caitriona Jackman and Abigail Rymer</li>
-                        <li>
-                            <strong>Instance Explainable Temporal Network For Multivariate Timeseries</strong>. Naveen Madiraju and Homa Karimabadi</li>
-                    </ul> -->
                     <p>12:00-13:00 Lunch Break</p>
 
-                    <h3>AFTERNOON SESSION (PST)</h3>
+                    <h3>AFTERNOON SESSION (Pacific Time)</h3>
                     <p>13:00-14:00 Keynote Talk</p>
                     <ul>
                         <li><strong>Irrational Exuberance: Why we should not believe 99% of papers on Time Series Anomaly Detection</strong>, <em>Eamonn Keogh</em></li>
@@ -261,13 +271,14 @@
                         In this talk, I will briefly give an overview of our recent research in designing well calibrated, robust, accurate and interpretable deep learning models for epidemic forecasting, illustrating the important role data science and
                         machine learning have to play for pandemic prevention and prediction.
                     </p>
-                    <b>Bio</b><br> B. Aditya Prakash is an Associate Professor in the College of Computing at the Georgia Institute of Technology (“Georgia Tech”). He received a Ph.D. from the Computer Science Department at Carnegie Mellon University
-                    in 2012, and a B.Tech (in CS) from the Indian Institute of Technology (IIT) -- Bombay in 2007. He has published one book, more than 80 papers in major venues, holds two U.S. patents and has given several tutorials at leading conferences.
-                    His work has also received multiple best-of-conference, best paper and travel awards. His research interests include Data Science, Machine Learning and AI, with emphasis on big-data problems in large real-world networks and time-series,
-                    with applications to computational epidemiology/public health, urban computing, security and the Web. Tools developed by his group have been in use in many places including ORNL, Walmart and Facebook. He has received several awards
-                    such as a Facebook Faculty Award, the NSF CAREER award and was named as one of ‘AI Ten to Watch’ by IEEE. His work has also won awards in multiple data science challenges (e.g the Facebook COVID19 Symptom Challenge) and been highlighted
-                    by several media outlets/popular press like FiveThirtyEight.com. He is also a member of the infectious diseases modeling MIDAS network and core-faculty at the Center for Machine Learning (ML@GT) and the Institute for Data Engineering
-                    and Science (IDEaS) at Georgia Tech. Aditya’s Twitter handle is @badityap.
+                    <p>
+                        <b>Bio</b><br> B. Aditya Prakash is an Associate Professor in the College of Computing at the Georgia Institute of Technology (“Georgia Tech”). He received a Ph.D. from the Computer Science Department at Carnegie Mellon University
+                        in 2012, and a B.Tech (in CS) from the Indian Institute of Technology (IIT) -- Bombay in 2007. He has published one book, more than 80 papers in major venues, holds two U.S. patents and has given several tutorials at leading conferences.
+                        His work has also received multiple best-of-conference, best paper and travel awards. His research interests include Data Science, Machine Learning and AI, with emphasis on big-data problems in large real-world networks and time-series,
+                        with applications to computational epidemiology/public health, urban computing, security and the Web. Tools developed by his group have been in use in many places including ORNL, Walmart and Facebook. He has received several awards
+                        such as a Facebook Faculty Award, the NSF CAREER award and was named as one of ‘AI Ten to Watch’ by IEEE. His work has also won awards in multiple data science challenges (e.g the Facebook COVID19 Symptom Challenge) and been highlighted
+                        by several media outlets/popular press like FiveThirtyEight.com. He is also a member of the infectious diseases modeling MIDAS network and core-faculty at the Center for Machine Learning (ML@GT) and the Institute for Data Engineering
+                        and Science (IDEaS) at Georgia Tech. Aditya’s Twitter handle is @badityap.
                 </div>
             </div>
 
@@ -295,12 +306,12 @@
                     <p><a href=" https://arxiv.org/abs/2001.01328" target="_blank">[Paper]</a>
                         <a href="https://github.com/google-research/torchsde">[Code]</a></p>
 
-                    <br>
-                    <b>Bio</b><br>David Duvenaud is an assistant professor at the University of Toronto. His research focuses on constructing deep probabilistic models to help predict, explain and design things. For example: Neural ODEs, a kind of continuous-depth
-                    neural network, Automatic chemical design using generative models, Gradient-based hyperparameter tuning, Structured latent-variable models for modeling video, and Convolutional networks on graphs. Previously, He was a postdoc in the
-                    Harvard Intelligent Probabilistic Systems group with Ryan Adams. He did my Ph.D. at the University of Cambridge, where his advisors were Carl Rasmussen and Zoubin Ghahramani. His M.Sc. advisor was Kevin Murphy at the University of
-                    British Columbia. He spent a summer working on probabilistic numerics at the Max Planck Institute for Intelligent Systems, and the two summers before that at Google Research, doing machine vision. He co-founded Invenia, an energy forecasting
-                    and trading firm where he still consult. He is also a founding member of the Vector Institute.
+                    <p>
+                        <b>Bio</b><br>David Duvenaud is an assistant professor at the University of Toronto. His research focuses on constructing deep probabilistic models to help predict, explain and design things. For example: Neural ODEs, a kind of
+                        continuous-depth neural network, Automatic chemical design using generative models, Gradient-based hyperparameter tuning, Structured latent-variable models for modeling video, and Convolutional networks on graphs. Previously, He
+                        was a postdoc in the Harvard Intelligent Probabilistic Systems group with Ryan Adams. He did my Ph.D. at the University of Cambridge, where his advisors were Carl Rasmussen and Zoubin Ghahramani. His M.Sc. advisor was Kevin Murphy
+                        at the University of British Columbia. He spent a summer working on probabilistic numerics at the Max Planck Institute for Intelligent Systems, and the two summers before that at Google Research, doing machine vision. He co-founded
+                        Invenia, an energy forecasting and trading firm where he still consult. He is also a founding member of the Vector Institute.
                     </p>
                 </div>
             </div>
@@ -325,11 +336,10 @@
                     on deeply flawed datasets, use of inappropriate measures of success, non-reproducible experiments, unjustified complexity, and ignoring competitive decades-old methods. I will demonstrate that because of these flaws, we should not
                     believe the claims of most papers on time series anomaly detection. Rather than a completely pessimistic talk, I will take this opportunity to release a new set of 250 benchmark datasets and guidelines that will go some way to mitigating
                     the problems.
-                    <br>
-                    <b>Bio</b><br>Eamonn Keogh is a Distinguished Professor of Computer Science at the University of California Riverside. With his students, he invented many of the most commonly used time series primitives, including Shapelets, Discords,
-                    Motifs, SAX, PAA, LB_keogh and the Matrix Profile. He has won at least one best paper award in the major data mining conferences (SIGMOD, SIGKDD, ICDM, SDM) and his h-index of 100 reflects the significant amount of citations his work
-                    has attracted.
-
+                    <p>
+                        <b>Bio</b><br>Eamonn Keogh is a Distinguished Professor of Computer Science at the University of California Riverside. With his students, he invented many of the most commonly used time series primitives, including Shapelets, Discords,
+                        Motifs, SAX, PAA, LB_keogh and the Matrix Profile. He has won at least one best paper award in the major data mining conferences (SIGMOD, SIGKDD, ICDM, SDM) and his h-index of 100 reflects the significant amount of citations his
+                        work has attracted.
                     </p>
                 </div>
             </div>
@@ -353,13 +363,12 @@
                         I will start this talk with a short intro to optimal transport theory, and mention a few interesting areas at the intersection of both optimal transport and time series. I will describe in more detail the JKO proximal gradient descent scheme and show
                         how it can be used to model time series of snapshots of populations (joint work with Charlotte Bunne, Laetitia Papaxanthos and Andreas Krause) and also the Wasserstein DTW discrepancy for such time series.
                     </p>
-                    <br>
-                    <b>Bio</b><br> Marco Cuturi joined Google Brain, in Paris, in October 2018. He graduated from ENSAE (2001), ENS Cachan (Master MVA, 2002) and holds a PhD in applied maths obtained in 2005 at Ecole des Mines de Paris. He worked as a
-                    post-doctoral researcher at the Institute of Statistical Mathematics, Tokyo, between 11/2005 and 03/2007. He worked in the financial industry between 04/2007 and 09/2008. After working at the ORFE department of Princeton University
-                    between 02/2009 and 08/2010 as a lecturer, he was at the Graduate School of Informatics of Kyoto University between 09/2010 and 09/2016 as a tenured associate professor. He then joined ENSAE, the french national school for statistics
-                    and economics, in 9/2016, where he still teaches. His recent proposal to solve optimal transport using an entropic regularization has re-ignited interest in optimal transport and Wasserstein distances in the machine learning community.
-                    His work has recently focused on applying that loss function to problems involving probability distributions, e.g. topic models / dictionary learning for text and images, parametric inference for generative models, regression with
-                    a Wasserstein loss and probabilistic embeddings for words.
+                    <p><b>Bio</b><br> Marco Cuturi joined Google Brain, in Paris, in October 2018. He graduated from ENSAE (2001), ENS Cachan (Master MVA, 2002) and holds a PhD in applied maths obtained in 2005 at Ecole des Mines de Paris. He worked as a
+                        post-doctoral researcher at the Institute of Statistical Mathematics, Tokyo, between 11/2005 and 03/2007. He worked in the financial industry between 04/2007 and 09/2008. After working at the ORFE department of Princeton University
+                        between 02/2009 and 08/2010 as a lecturer, he was at the Graduate School of Informatics of Kyoto University between 09/2010 and 09/2016 as a tenured associate professor. He then joined ENSAE, the french national school for statistics
+                        and economics, in 9/2016, where he still teaches. His recent proposal to solve optimal transport using an entropic regularization has re-ignited interest in optimal transport and Wasserstein distances in the machine learning community.
+                        His work has recently focused on applying that loss function to problems involving probability distributions, e.g. topic models / dictionary learning for text and images, parametric inference for generative models, regression with
+                        a Wasserstein loss and probabilistic embeddings for words.
                     </p>
                 </div>
             </div>
